ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.0-rc0, 5.3.0-rc3
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v5.3
    • Sharding EMEA 2022-03-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If a database is dropped and recreated and then configure collection balancing is run immediately, the call to getShardedCollectionRoutingInfo can return a stale uuid for the collection which will cause a uassertion that there is a conflicting operation in progress. The command will retry, but will still get stale information. We should update the call to the catalog cache to use getShardedCollectionRoutingInfoWithRefresh

            Assignee:
            Allison Easton
            Reporter:
            Allison Easton
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: