SERVER-63905 ConfigureCollectionBalancing command should refresh collection routing info